--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -63,4 +63,37 @@
   .min-h-main {
     @apply min-h-[var(--main-min-height)];
   }
+
+  blockquote {
+    @apply mt-6 border-l-2 pl-6 italic;
+  }
+
+  .text-h1 {
+    @apply mb-4 scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-6xl;
+  }
+
+  .text-h2 {
+    @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0 lg:text-4xl;
+  }
+
+  .text-h3 {
+    @apply scroll-m-20 text-2xl font-semibold tracking-tight lg:text-3xl;
+  }
+
+  .text-h4 {
+    @apply scroll-m-20 text-xl font-semibold tracking-tight;
+  }
+
+  .text-p {
+    @apply leading-7;
+  }
+
+  .text-lead {
+    @apply text-xl text-muted-foreground;
+  }
+
+  .with-placeholder::after {
+    content: attr(data-placeholder);
+    @apply absolute inset-0 z-10 block text-left text-gray-200 font-light italic;
+  }
 }
